[package]
name = "webcrawler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam-channel = "0.5.8"
reqwest = { version = "0.11.16", features = ["blocking", "json"]}
scraper = "0.12.0"
url = "2.2.2"
